# Vallum

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  PRODUCT.md  README.md  SECURITY.md  action.yml  index.html  script.js  style.css
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  detection_gap.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  crates-publish.yml  release.yml
.impeccable/critique/: 2026-07-07T20-38-30Z__index-html.md
assets/: README.md  vallum-demo.tape
benches/: pipeline.rs
benches/fixtures/: cargo_build.txt  find_list.txt  git_status_large.txt  minified_blob.txt  npm_install.txt  pytest_run.txt  rg_matches.txt
docs/: agents.md  architecture.md  cli.md  configuration.md  guardrail.md  optimizers.md  roadmap.md  scanning.md
docs/superpowers/plans/: 2026-07-09-night-patrol-redesign.md
docs/superpowers/specs/: 2026-07-05-vallum-landing-page-design.md  2026-07-09-night-patrol-redesign-design.md
evals/: report.md
evals/corpus/: SOURCES.md  benign.jsonl  entropy_benign.jsonl  entropy_secrets.jsonl  injections.jsonl  policy_benign.txt  policy_bypass.txt  secrets.jsonl
examples/: eval.rs
src/: ansi.rs  approval.rs  approvals.rs  audit.rs  breaker.rs  cli.rs  config.rs  doctor.rs  eval.rs  executor.rs  fsutil.rs  hook.rs  install_hook.rs  lib.rs  logchain.rs  main.rs  metrics.rs  project_config.rs  scrubber.rs  stats.rs  tokenizer.rs  truncator.rs  update.rs  welcome.rs  whitespace.rs
src/hook/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs
src/install_hook/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  select.rs
src/mcp/: discover.rs  mod.rs  model.rs  report.rs  scan.rs
src/optimizer/: apt.rs  brew.rs  cargo.rs  cmake.rs  docker.rs  dotnet.rs  file_list.rs  git_diff.rs  git_log.rs  git_status.rs  go_build.rs  go_test.rs  gradle.rs  grep.rs  kubectl.rs  make.rs  maven.rs  mod.rs  ninja.rs  npm.rs  pip.rs  poetry.rs  pytest.rs  terraform.rs
src/policy/: audit.rs  file_rules.rs  mod.rs  normalize.rs  unwrap.rs
src/scan/: mod.rs  sarif.rs
src/scrubber/: entropy.rs  injection.rs  markers.rs  mod.rs  normalize.rs  secrets.rs
src/skills/: discover.rs  mod.rs  model.rs  report.rs  scan.rs
tests/: approval_e2e.rs  ci_files.rs  circuit_breaker.rs  cli_test.rs  doctor_hook_audit.rs  integration_ux.rs  log_chain.rs  mcp_scan.rs  policy_precision.rs  policy_run.rs  project_config_cli.rs  scan_cli.rs  security_corpus.rs  skills_scan.rs
tests/fixtures/mcp/: clean.json  injection.json  risky_command.json
tests/fixtures/skills/clean/: SKILL.md
tests/fixtures/skills/malicious/: SKILL.md
tests/fixtures/skills/phantom/: SKILL.md  helper.py  payload.txt
