[package]
name = "vallum"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust CLI proxy between AI agents and your shell — sanitizes secrets, flags prompt injections, strips ANSI, compresses output, audits commands."
repository = "https://github.com/kahramanemir/Vallum"
readme = "README.md"
authors = ["Emir Kahraman"]
keywords = ["ai", "cli", "proxy", "security", "tokens"]
categories = ["command-line-utilities"]

[lib]
name = "vallum"
path = "src/lib.rs"

[[bin]]
name = "vallum"
path = "src/main.rs"

[features]
bpe = ["dep:tiktoken-rs"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4"
regex = "1.10"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
unicode-normalization = "0.1"
tiktoken-rs = { version = "0.6", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "pipeline"
harness = false
