[package]
name = "vallum"
version = "0.8.6"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Security boundary between AI coding agents and your shell — redacts secrets, neutralizes prompt injection, sanitizes untrusted terminal output, audits every command."
repository = "https://github.com/kahramanemir/Vallum"
homepage = "https://github.com/kahramanemir/Vallum"
readme = "README.md"
authors = ["Emir Kahraman"]
keywords = ["ai-agents", "prompt-injection", "llm-security", "security", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "vallum"
path = "src/lib.rs"

[[bin]]
name = "vallum"
path = "src/main.rs"

[features]
bpe = ["dep:tiktoken-rs"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4"
regex = "1.10"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
unicode-normalization = "0.1"
tiktoken-rs = { version = "0.6", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "pipeline"
harness = false

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "npm", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-musl"]
# A GitHub repo to push Homebrew formulas to
tap = "kahramanemir/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "npm"]
# The npm package should have this name
npm-package = "vallum"
# Checksums to generate for each App
checksum = "sha256"
# Whether to enable GitHub Attestations
github-attestations = true
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
